________________________________________________________________________________

                        Win32::UTCFileTime, Version 1.57
________________________________________________________________________________

Revision history for Perl extension Win32::UTCFileTime.
_________________

v1.57 TODO

    - Documented a new problem with the _utime() function in Visual Studio 2013
      (VC12)'s C RTL DLL, which this module's replacement utime() function also
      fixes.

    - Incorporated an improvement to the stat(), lstat() and alt_stat()
      functions that was introduced in Perl 5.8.9: These functions now work
      correctly on directories specified with trailing slashses or backslashes,
      even when using an older version of Perl.

    - Incorporated perl's special handling of the file mode field returned by
      stat() when compiled with Borland C++ into alt_stat() so that the field is
      no longer set differently to perl for that compiler.

    - Changed the Microsoft C library function call _get_osfhandle() to Perl's
      exported function win32_get_osfhandle() so that it should not fail due to
      the file descriptor passed to it being unrecognized.  This could
      previously happen if this module was built by a compiler that used a
      different C RTL DLL to that used by the compiler used to build perl.  This
      restores support for such configurations, which was added in version 1.33,
      but was broken if Visual Studio 2005 (VC8) or later was used to build this
      module because the failing _get_osfhandle() call would actually crash the
      program due to the new default invalid parameter handler.

      It appears that using different compilers (and hence potentially different
      C RTL DLLs) is safe now that the potential problem in doing so has been
      removed, so the rudimentary checks on the compiler versions in Makefile.PL
      have been removed too.  Note, however, that there is still a compatibility