@@ -80,12 +80,13 @@ MAIN: {
 
     rmdir $dir or die "Can't delete directory '$dir': $!\n" if -e $dir;
     mkdir $dir or die "Can't create directory '$dir': $!\n";
+    my($age, $utime, $ret);
     $time = time;
     for my $i (-7 .. 7) {
-        my $age = $i * 5000000;
-        my $utime = $time + $age;
+        $age = $i * 5000000;
+        $utime = $time + $age;
 
-        my $ret = utime $utime, $utime, $dir;
+        $ret = utime $utime, $utime, $dir;
         ($errno, $lasterror) = ($!, $^E);
         ok($ret, 'utime() returns OK for time ' . scalar gmtime $utime) or
             diag("\$! = '$errno', \$^E = '$lasterror'");
